--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+
+fmod_editor.log
